# OmniAI

./: .env.example  .replit  LICENSE  README.md  frontend_load_test.py  main.py  performance_monitor.py  quick_test.py  replit.md  requirements.txt  run_all_tests.py  setup.py  stress_test.py
attached_assets/: Pasted-To-address-your-request-I-ll-provide-a-comprehensive-solution-that-includes-1-Search-Results--1751645483403_1751645483407.txt  dependabot_alerts.md
backend/: __init__.py
backend/core/: __init__.py  config.py  nvidia_integration.py
backend/core/routes/: __init__.py  github_routes.py  nvidia_routes.py  vercel_routes.py
docs/: OmniAI_Complete_Implementation_Guide.md  Test_Case_For_Frontend_Middlewear_And_Backend.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: Dashboard.tsx  DeploymentPanel.tsx  GitHubIntegration.tsx  NVIDIAPanel.tsx  VercelIntegration.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: utils.ts
frontend/src/state/: atoms.ts
middleware/: .env.example  Cargo.toml
middleware/src/: auth.rs  cache.rs  main.rs  proxy.rs  rate_limit.rs  security.rs  validation.rs
