
[package]
name = "omni-ai-middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"
redis = { version = "0.25", features = ["tokio-comp"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
bytes = "1.0"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
regex = "1.0"
once_cell = "1.19"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
